# anaroot_hicari

./: .gitignore  autogen.sh  configure.in
run/db/: BigRIPSIC.xml  BigRIPSPPAC.xml  BigRIPSPlastic.xml  BigRIPSTKE.xml
run/db/IC/: BigRIPSIC.csv  BigRIPSIC.csv.20210409  BigRIPSIC.csv.20210409.empt  BigRIPSIC.csv.20210412  BigRIPSIC.csv.HICARI.20201208_5mmC  BigRIPSIC.csv.HICARI.20201209_13mmCH2  BigRIPSIC.csv.HICARI.20201210_13mmCH2  BigRIPSIC.csv.HICARI.20201211_notarget  BigRIPSIC.csv.HiCARI.20200320  BigRIPSIC.csv.HiCARI.20201026  BigRIPSIC.csv.HiCARI.20201026_6mmBe  BigRIPSIC.csv.HiCARI.20201030_6mmBe  BigRIPSIC.csv.HiCARI.20201030_empty  BigRIPSIC.csv.HiCARI.20201108_3.8mmBe  BigRIPSIC.csv.HiCARI.20201111_6mmBe  BigRIPSIC.csv.HiCARI.20201115  BigRIPSIC.csv.HiCARI.20201118  BigRIPSIC.csv.HiCARI.20201203  BigRIPSIC.csv.HiCARI.20201208_54Ca  BigRIPSIC.csv.HiCARI.20201208_notarget  BigRIPSIC.xml  BigRIPSIC.xml.HiCARI.20201026_notarget  BigRIPSIC.xml.empt  BigRIPSIC.xml.gamma20
run/db/PPAC/: BigRIPSPPAC.csv  BigRIPSPPAC.csv.20201020  BigRIPSPPAC.csv.20210409  BigRIPSPPAC.csv.20210412  BigRIPSPPAC.csv.HiCARI.20200320  BigRIPSPPAC.csv.HiCARI.20201026  BigRIPSPPAC.csv.HiCARI.20201026_2  BigRIPSPPAC.csv.HiCARI.20201029  (+5 more)
sources/: Makefile.am
sources/AnaLoop/: Makefile.am
sources/Core/src/: TArtDecoderMADC32.cc
sources/Nadeko/src/: TArtExec.cc
sources/Reconstruction/: Makefile.am
sources/Reconstruction/BigRIPS/include/: TArtIC.hh  TArtICPara.hh
sources/Reconstruction/BigRIPS/src/: TArtBigRIPSParameters.cc  TArtCalibIC.cc  TArtCalibPPAC.cc  TArtCalibPlastic.cc
(+61 files in other folders)
